k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pms-frontend
  namespace: default
  labels:
    app: pms-frontend
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "3000"
    prometheus.io/path: "/api/metrics"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pms-frontend
  template:
    metadata:
      labels:
        app: pms-frontend
    spec:
      containers:
      - name: pms-frontend
        # This tag will be dynamically updated by GitLab CI during deployment
        image: 401644592968.dkr.ecr.us-east-1.amazonaws.com/pms/app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http
        
        # Injecting secrets securely from the Kubernetes Secret store
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 15
          
        # Fargate memory/cpu requests
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
