k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pms-service
  namespace: default
  labels:
    app: pms-frontend
  annotations:
    # This tells AWS to create a modern Network Load Balancer instead of a legacy Classic ELB
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    # This tells AWS to make it public to the internet
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  selector:
    app: pms-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
