k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pms-ingress
  namespace: default
  annotations:
    # Use the AWS Load Balancer Controller
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
    # SSL / HTTPS Configuration
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:401644592968:certificate/fcb07b99-343e-4907-8a2f-bb4adebe2724
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: staysync.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pms-service
                port:
                  number: 80
    - host: www.staysync.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pms-service
                port:
                  number: 80
